# sparse

./: .gitignore  ChangeLog  README  README.md  autogen.sh  configure.ac
src/: Makefile.am  matrice.c  sparse.c  sparse.h
